# spoon-transcribing

./: .gitignore  LICENSE  README.md  backend-sse-requirements.md  docs.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx
app/context/: NeoWalletContext.tsx
app/hooks/: useSSEStream.ts
app/integrations/: page.tsx
app/record/: page.tsx
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  WEBHOOK_DEBUGGING_GUIDE.md  deploy.sh  dev.sh  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3de79ba93d50_add_streaming_bot_fields_to_meetings.py  4a2c1c0c6a3a_add_chat_conversation_tables.py  7c1a9a8b4c2e_add_user_access_table.py  8f2b6a1f2b1c_expand_audio_url_length.py
backend/app/: celery_app.py  cli.py  config.py  main.py
backend/app/api/routes/: chat.py  meetings.py  recall.py  streaming.py  twins.py  zoom.py
backend/app/models/: chat.py  meeting.py  user_access.py
backend/app/schemas/: meeting.py
backend/app/services/: email.py  heygen.py  meeting_agent.py  recall.py  streaming_transcription.py  summarization.py  transcription.py  zoom_bot.py
backend/app/tasks/: email.py  summarization.py  transcription.py  zoom_bot.py  zoomrec.py
backend/scripts/: dev.py
frontend/: package.json
frontend/app/: page.tsx
frontend/app/components/: Sidebar.tsx
frontend/app/digital-twins/: page.tsx
frontend/app/hooks/: useMeetingStream.ts
frontend/scripts/: zoom-bot.js
scripts/: deploy_prod.sh
(+5 files in other folders)
